@@ -18,7 +18,6 @@ classifiers =
     Programming Language :: Python
     Topic :: Scientific/Engineering
     Topic :: Software Development :: Libraries
-    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
@@ -27,17 +26,13 @@ classifiers =
 packages = pint
 zip_safe = True
 include_package_data = True
-python_requires = >=3.7
-install_requires =
-    packaging
-    importlib-metadata; python_version < '3.8'
+python_requires = >=3.8
 setup_requires = setuptools; setuptools_scm
-test_suite = pint.testsuite.testsuite
 scripts = pint/pint-convert
 
 [options.extras_require]
-numpy = numpy >= 1.17
-uncertainties = uncertainties >= 3.1.4
+numpy = numpy >= 1.19.5
+uncertainties = uncertainties >= 3.1.6
 test =
     pytest
     pytest-mpl
